--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+/* Global styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa; /* Light gray background */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Header styles */
+/* Sticky Navbar */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Ensure it stays on top of other content */
+  background-color: #007bff; /* Match your navbar color */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional for a subtle shadow */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header .container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+header nav {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
+header .nav-link {
+  color: #fff;
+  margin-right: 20px;
+  text-decoration: none;
+}
+
+header .nav-link:hover {
+  text-decoration: underline;
+}
+
+header .navbar-brand {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+header .navbar-toggler {
+  color: #fff;
+  border-color: #fff;
+}
+
+/* Navbar Brand */
+.navbar-brand {
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+
+/* About us */
+.card {
+  border-radius: 10px;
+}
+
+.card h2 {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.card p {
+  font-size: 16px;
+  color: #6c757d;
+}
+
+.card .card-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.card .card-text {
+  color: #6c757d;
+}
+
+/* Blog Post */
+
+.modal-overlay {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.posts .card {
+  margin-top: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+@keyframes fadeIn {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+
+.posts .card {
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+
+/* Mobile Responsive Styles */
+@media (max-width: 768px) {
+  header .container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  header nav {
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
   }
 }
